# compmath

./: .gitignore  README.md  config.ini  install.sh  pyproject.toml  uninstall.sh
linux/: .desktop
scripts/: install.sh
scripts/linux/: .desktop  compmath.sh  install.sh  uninstall.sh
scripts/windows/: compmath.bat  initial.bat
src/: ty.py
src/compmath/: config.py  main.py  version.py
src/compmath/api/: aif.py  base.py  factory.py  ni.py  slat.py  sne.py
src/compmath/controllers/: __init__.py  aif.py  main.py  ni.py  nonlinear.py  research.py  settings.py  slat.py  sne.py
src/compmath/models/: __init__.py  aif.py  base.py  graphic.py  main.py  ni.py  research.py  settings.py  sne.py
src/compmath/models/aif/: __init__.py  alsm.py  base.py  interspline.py  lsm.py
src/compmath/models/ni/: __init__.py  base.py  intermediate.py  lrm.py  mrm.py  rrm.py  sm.py  sm1.py  sm2.py  tm.py
src/compmath/models/nonlinear/: __init__.py  base.py  graphic.py  hdm.py  mcs.py  mcs_one.py  mcs_two.py  ntm.py  sim.py
src/compmath/models/slat/: __init__.py  base.py  gm.py  sim.py  zm.py
src/compmath/models/sne/: base.py  ntm.py  sim.py  zm.py
src/compmath/themes/: __init__.py  base.py  coffee.py  default.py  sakura.py
src/compmath/utils/: data.py  func.py  icon.py  observer.py  theme.py  ts_meta.py
src/compmath/views/aif/: __init__.py  approximation.py  (+3 more)
src/compmath_calc_server/: config.py  exceptions.py  main.py  version.py
src/compmath_calc_server/controllers/: aif.py  ni.py  slat.py  sne.py
src/compmath_calc_server/models/: __init__.py  error.py  graphic.py
src/compmath_calc_server/utils/: func.py  openapi.py
src/compmath_calc_server/views/: __init__.py  aif.py  base.py  ni.py  slat.py  sne.py
(+58 files in other folders)
