[tool.poetry]
name = "CompMath"
version = "0.1.0"
description = ""
authors = ["JKearnsl <boyarshinovn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.6.1"
psutil = "^5.9.8"
apscheduler = "^3.10.4"

# Math
scipy = "^1.12"
sympy= "^1.12"

# Plot
matplotlib = "^3.8.3"
pyqtgraph = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src/compmath"