[tool.poetry]
name = "CompMath"
version = "0.0.1"
description = ""
authors = ["JKearnsl <boyarshinovn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.6.1"
psutil = "^5.9.8"
apscheduler = "^3.10.4"
PyOpenGL = "^3.1.7"

# Math
scipy = "^1.12"
sympy= "^1.12"

# Calc Server
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"

# Plot
matplotlib = "^3.8.3"
pyqtgraph = "^0.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src/compmath"